# Toddler

./: .env.example  .gitignore  AUDIT.md  FULL_AUDIT_REPORT.md  MOBILE_BUILD.md  NEW_TODDLER_SPEC.md  OLD_TODDLER_SPEC.md  README.md  README_ANDROID.md  SPRINT_PLAN.md  android-workflow-paste-me.yml  android.yml  capacitor.config.json  firestore.indexes.json  firestore.rules  generate_summary.py  index.html  package-lock.json  package.json  platform-visualization.html  render.yaml  tailwind.config.js  toddler_project_summary.docx  vite.config.js  webapp-flow.html
.github/workflows/: android-apk.yml  android.yml  create-keystore.yml  encode-keystore.yml
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle  google-services.json  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  OnDeviceRuntime.cpp
backend/: Dockerfile  agent.py  agent_entry.py  hardware_audit.py  main.py  requirements.txt  run.sh
backend/inference_service/: Dockerfile  main.py  requirements.txt
desktop/src/: App.css  (+1 more)
ops/: FREE_TIER.md
public/: byoc-worker.js  widget.js
schema/: model.schema.json
src/: App.jsx  Auth.jsx  Dashboard.jsx  LandingPage.jsx  MobileApp.jsx  MobileDashboard.jsx  MobileWrapper.jsx  ModelDetail.jsx  ModelWorkspace.jsx  MyModels.jsx  Onboarding.jsx  TrainWizard.jsx  Zoo.jsx  byoc.js  cloud.js  env.js  firebase.js  index.css  llm.js  main.jsx  mobile.css  nativeBridge.js  notify.js  rag.js  textML.js  visionML.js
temporary/: toddler-release.keystore
test/: deviceCapacity.test.js  onDeviceCapability.test.js
(+57 files in other folders)
