cmake_minimum_required(VERSION 3.22)
project(ondevice_runtime)

set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
set(LLAMA_BUILD_APP OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_COMMON OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(LLAMA_OPENSSL OFF CACHE BOOL "" FORCE)
set(GGML_NATIVE OFF CACHE BOOL "" FORCE)
set(GGML_BACKEND_DL ON CACHE BOOL "" FORCE)
set(GGML_CPU_ALL_VARIANTS ON CACHE BOOL "" FORCE)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../../../../third_party/llama.cpp ${CMAKE_CURRENT_BINARY_DIR}/llama)
add_library(ondevice_runtime SHARED OnDeviceRuntime.cpp)
target_include_directories(ondevice_runtime PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../../../../third_party/llama.cpp/include)
target_link_libraries(ondevice_runtime llama android log)
